Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1405,7 +1405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Compare with the total length of the parameter space and draw conclusions!\n",
+    "#Compare with the total length of the parameter space and draw conclusions!\n",
     "\n",
     "Lasso was very effective to essentially perform variable selection and remove about 25% of the variables from your model!\n"
    ]
